--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     <servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
     <init-param>
       <param-name>debug</param-name>
-      <param-value>false</param-value>
+      <param-value>true</param-value>
     </init-param>
   </servlet>
   <servlet-mapping>
