--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,5 @@ eclipse.preferences.version=1
 encoding//WebContent/static/i18n/blog.properties=UTF-8
 encoding//WebContent/static/i18n/blog_zh_CN.properties=UTF-8
 encoding//WebContent/static/i18n/blogs_zh_CN.properties=UTF-8
+encoding//WebContent/static/i18n/downloadError.properties=UTF-8
 encoding//WebContent/static/i18n/index_zh_CN.properties=UTF-8
