管理员用户名密码改用JSON配置文件验证

--- a/WebContent/WEB-INF/config.json
+++ b/WebContent/WEB-INF/config.json
@@ -1,4 +1,6 @@
 {
-	"admin": "lm2343635",
-	"password": "522697460"
+    "admin":"admin",
+    "password":"123",
+    "adminPageSize": 15,
+    "userPageSize": 15
 }
