使用JSONArray配置管理员账户

--- a/WebContent/WEB-INF/config.json
+++ b/WebContent/WEB-INF/config.json
@@ -1,6 +1,8 @@
 {
-    "admin":"admin",
-    "password":"123",
+	"admins" : [{
+		"username":"admin",
+    	"password":"123",
+	}],  
     "adminPageSize": 15,
     "userPageSize": 15
 }
