更新多语言选择菜单

--- a/WebContent/WEB-INF/config.json
+++ b/WebContent/WEB-INF/config.json
@@ -1,7 +1,7 @@
 {
 	"admins": [{
 		"username":"admin",
-    	"password":"123",
+    	"password":"123"
 	}],  
     "adminPageSize": 15,
     "userPageSize": 15
