博文列表页自定义单页长度

--- a/WebContent/WEB-INF/config.json
+++ b/WebContent/WEB-INF/config.json
@@ -1,8 +1,6 @@
 {
-	"admins": [{
-		"username":"admin",
-    	"password":"123"
-	}],  
-    "adminPageSize": 15,
-    "userPageSize": 15
+	"pageSize": {
+		"adminPageSize": 15,
+    	"blogPageSize": 15
+	} 
 }
