Update Japanese translation.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,4 +9,5 @@ encoding//WebContent/static/i18n/downloadError_zh_CN.properties=UTF-8
 encoding//WebContent/static/i18n/index.properties=UTF-8
 encoding//WebContent/static/i18n/index_ja.properties=UTF-8
 encoding//WebContent/static/i18n/index_zh_CN.properties=UTF-8
+encoding//WebContent/static/i18n/urlError_ja.properties=UTF-8
 encoding//WebContent/static/i18n/urlError_zh_CN.properties=UTF-8
