--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.fczm</groupId>
     <artifactId>blog</artifactId>
     <packaging>war</packaging>
-    <version>1.0</version>
+    <version>2.0</version>
     <name>Blog Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
@@ -119,16 +119,17 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>blog</finalName>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <url>http://localhost:8080/</url>
+                    <server>Tomcat</server>
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>blog</finalName>
     </build>
 </project>
