--- a/src/main/webapp/WEB-INF/config.properties
+++ b/src/main/webapp/WEB-INF/config.properties
@@ -1,7 +1,8 @@
-hibernate.hbm2ddl.auto = update
-hibernate.show_sql = false
-hibernate.format_sql = true
-
-db.url = jdbc:mysql://127.0.0.1:3306/blog_test?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
-db.username = root
-db.password =
+# Hibernate
+hibernate.hbm2ddl.auto=update
+hibernate.show_sql=false
+hibernate.format_sql=true
+# Database
+db.url=jdbc:mysql://127.0.0.1:3306/blog_test?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
+db.username=root
+db.password=
